--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -45,10 +45,10 @@
             <div class="col-md-4">
                 {% if current_user.is_authenticated %}
                 <div class="container">
-                    <div class="col-md-3 "><a class="btn btn-sm btn-warning " id="ref" href="{{url_for('main.new_blog')}}">Post</a></div>
+                    <div class="col-md-3 "><a class="btn btn-sm btn-warning " id="ref" href="{{url_for('main.new_blog')}}">Post Blog</a></div><br>
                     <div class="card cardquote">
                         <div class="card-title">
-                            <h4>A quote by: <span style="color: rgb(3, 3, 3)">{{quote.author}}</span> </h4>
+                            <h4>A quote by: <span style="color: aliceblue">{{quote.author}}</span> </h4>
                         </div>
                         <p class="card-text">{{quote.quote}}</p>
                     </div>
@@ -62,7 +62,7 @@
                     {% endfor %}
                     <form class="form-inline ml-2" action="{{url_for('main.subscribe')}}" method="POST">
                         <div class="md-form form-group">
-                            <label class="white-color">Email Address...</label>
+                            <label class="white-color" style="color: azure;">Email Address:</label><br>
                             <input type="email"  class="form-control " name ="subscriber" required>
                         </div>
                         <div class="md-form form-group">
