--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -62,7 +62,7 @@
                     {% endfor %}
                     <form class="form-inline ml-2" action="{{url_for('main.subscribe')}}" method="POST">
                         <div class="md-form form-group">
-                            <label class="white-color" style="color: azure;">Email Address:</label><br>
+                            <label class="white-color" style="color: azure;">Email Address:</label>
                             <input type="email"  class="form-control " name ="subscriber" required>
                         </div>
                         <div class="md-form form-group">
