--- a/app/templates/profile/profile.html
+++ b/app/templates/profile/profile.html
@@ -17,8 +17,7 @@
                 <span class="text-danger">{{ error }}</span></br>
               {% endfor %}
             {%endif%}
-    <div class="card testimonial-card">
-    <div class="card-up indigo lighten-1"></div>
+    <div class="card">
     <div class="avatar mx-auto white">
       <img src="{{profile_pic_path}}" class="rounded-circle account-img mt-2" alt="woman avatar">
     </div>
