--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -50,6 +50,9 @@
   h1,h4{
     font-family: 'El Messiri', sans-serif;
   }
+  .black{
+      color: black;
+  }
 #modalComment{
     border-radius: 5px;
 }
