--- a/app/templates/profile/profile.html
+++ b/app/templates/profile/profile.html
@@ -4,7 +4,7 @@
 <div class="container">
   <div class="row">
     <div class="col-md-1"></div>
-    <div class="col-md-4 black">
+    <div class="col-md-4">
         <div class="content-section mt-4">
             {% for message in get_flashed_messages() %}
             <div class="alert alert-success">
@@ -17,19 +17,20 @@
                 <span class="text-danger">{{ error }}</span></br>
               {% endfor %}
             {%endif%}
-    <div class="card">
+    <div class="card testimonial-card">
+    <div class="card-up indigo lighten-1"></div>
     <div class="avatar mx-auto white">
       <img src="{{profile_pic_path}}" class="rounded-circle account-img mt-2" alt="woman avatar">
     </div>
     <div class="card-body">
-      <h4 class="card-title text-center">{{current_user.username|title}}</h4>
+      <h4 class="card-title text-center black">{{current_user.username|title}}</h4>
       <hr>
       <p> {{current_user.email}} </p>
-      <p><i class="fas fa-quote-left"></i> {{current_user.bio}} <i class="fas fa-quote-right"></i> </p>
+      <p><i class="fas fa-quote-left black"></i> {{current_user.bio}} <i class="fas fa-quote-right"></i> </p>
       <button class="btn btn-sm btn-info" id="showform"> Update Profile</button>
     </div>
       
-      </div>
+        </div>
     </div>
   </div>
   <div class="col-md-6">
