--- a/app/templates/profile/profile.html
+++ b/app/templates/profile/profile.html
@@ -23,10 +23,10 @@
       <img src="{{profile_pic_path}}" class="rounded-circle account-img mt-2" alt="woman avatar">
     </div>
     <div class="card-body">
-      <h4 class="card-title text-center black">{{current_user.username|title}}</h4>
+      <h4 class="card-title text-center"><span style="color: black;">{{current_user.username|title}}</span></h4>
       <hr>
-      <p> {{current_user.email}} </p>
-      <p><i class="fas fa-quote-left black"></i> {{current_user.bio}} <i class="fas fa-quote-right"></i> </p>
+      <p><span style="color: black;"> {{current_user.email}}</span></p>
+      <p><span style="color: black;"><i class="fas fa-quote-left"></i> {{current_user.bio}} <i class="fas fa-quote-right"></i></span></p>
       <button class="btn btn-sm btn-info" id="showform"> Update Profile</button>
     </div>
       
