--- a/app/templates/profile/profile.html
+++ b/app/templates/profile/profile.html
@@ -17,10 +17,10 @@
                 <span class="text-danger">{{ error }}</span></br>
               {% endfor %}
             {%endif%}
-    <div class="card testimonial-card">
+    <div class="card testimonial-card" style="background-color: rgba(202, 193, 193, 0.8);">
     <div class="card-up indigo lighten-1"></div>
     <div class="avatar mx-auto white">
-      <img src="{{profile_pic_path}}" class="rounded-circle account-img mt-2" alt="woman avatar">
+      <img src="{{profile_pic_path}}" class="account-img" style="width: 100%; height: 100%;" alt="avatar">
     </div>
     <div class="card-body">
       <h4 class="card-title text-center"><span style="color: black;">{{current_user.username|title}}</span></h4>
