update blog view

--- a/app/templates/blog.html
+++ b/app/templates/blog.html
@@ -18,8 +18,8 @@
                         {{ message }}
                         </div>
                         {% endfor %}
-                        <p>By <span style="color: blue">{{blog.user.username}}</span>  on {{blog.posted.strftime('%d-%m-%Y')}}</p>
-                        <h3>Title : {{blog.title}} <span style="float: right;font-size:18px;margin-right:20px">{{blog.comment.count()}} Comments</span></h3>
+                        <p>By <span style="color: aliceblue">{{blog.user.username}}</span>  on {{blog.posted.strftime('%d-%m-%Y')}}</p>
+                        <h3>Title : {{blog.title}} <span style="float: right;font-size:18px;margin-right:20px">{{blog.comment.count()}} Comment(s)</span></h3>
                         <p>{{blog.content}}</p>
                         <div>
                         <a class="btn btn-success btn-sm m-1" data-toggle="modal" data-target="#modalComment">Comment</a>
