--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -25,7 +25,7 @@
       padding: 3%;
   }
   #submit{
-      background-color: green;
+      background-color: aliceblue;
       border-radius: 5px;
   }
   #profbutton,#ref,#subs{
@@ -46,12 +46,12 @@
       border-radius: 6px;
   }
   h1,h4{
-    font-family: 'El Messiri', sans-serif;
+    font-family: 'Grenze Gotisch', cursive;
   }
 #modalComment{
     border-radius: 5px;
 }
 .singleblog{
-    background-color: rgba(255, 255, 255, 0.924);  
+    background-color: rgba(202, 193, 193, 0.8);  
     color: black;
 }
