--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -14,11 +14,11 @@
                         <div class="row ">
                             <div class="col-md-2 ">
                                     <img class="rounded-circle blog-img mr-10" src="{{ url_for('static', filename='photos/' + blog.user.profile_pic_path) }}">
-                                    <p id="usern"><a href="{{url_for('main.user_posts',username = blog.user.username)}}"><span  style="color: blue"><strong>{{blog.user.username | title}}</strong></span> </a> </p> 
+                                    <p id="usern"><a href="{{url_for('main.user_posts',username = blog.user.username)}}"><span  style="color: aliceblue"><strong>{{blog.user.username | title}}</strong></span> </a> </p> 
                             </div>
                             <div class="col-md-10 pr-4 d-justify userblog">
                                 <p>Posted on : {{blog.posted.strftime('%d-%m-%Y')}}</p>
-                                <h4><a href="{{url_for('main.blog',id = blog.id)}}">{{blog.title | upper}}</a></h4>
+                                <h4><a href="{{url_for('main.blog',id = blog.id)}}" style="text-decoration: none;color: aliceblue;">{{blog.title | upper}}</a></h4>
                                 <p>{{blog.content}}</p>
                                 <p> <a class="btn btn-sm btn-info" href="{{url_for('main.blog',id = blog.id)}}" > See more</a> {{blog.comment.count()}} Comments</p>
                                 
