--- a/app/templates/userposts.html
+++ b/app/templates/userposts.html
@@ -42,7 +42,7 @@
                 {% for page_num in blogs.iter_pages(left_edge = 1, right_edge = 1, left_current=1, right_current = 2) %}
                     {% if page_num %}
                         {% if blogs.page == page_num %}
-                            <a href="{{url_for('main.user_posts',username = user.username,page = page_num)}}" class="btn btn-sm btn-info mb-2">Page {{ page_num }}</a>
+                            <a href="{{url_for('main.user_posts',username = user.username,page = page_num)}}" class="btn btn-sm btn-warning mb-2">Page {{ page_num }}</a>
                         {% else%}
                         <a href="{{url_for('main.user_posts',username = user.username,page = page_num)}}" class="btn btn-sm btn-outline-info mb-2">Page {{ page_num }}</a>
                         {% endif %}
