--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -17,10 +17,10 @@
                                     <p id="usern"><a href="{{url_for('main.user_posts',username = blog.user.username)}}"><span  style="color: aliceblue"><strong>{{blog.user.username | title}}</strong></span> </a> </p> 
                             </div>
                             <div class="col-md-10 pr-4 d-justify userblog">
-                                <p>Posted on : {{blog.posted.strftime('%d-%m-%Y')}}</p>
                                 <h4><a href="{{url_for('main.blog',id = blog.id)}}" style="text-decoration: none;color: aliceblue;">{{blog.title | upper}}</a></h4>
                                 <p>{{blog.content}}</p>
-                                <p> <a class="btn btn-sm btn-info" href="{{url_for('main.blog',id = blog.id)}}" > See more</a> {{blog.comment.count()}} Comments</p>
+                                <p> <a class="btn btn-sm btn-outline-warning" href="{{url_for('main.blog',id = blog.id)}}" > See more</a> {{blog.comment.count()}} Comments</p>
+                                <p>Posted on : {{blog.posted.strftime('%d-%m-%Y')}}</p>
                                 
                             </div>
                         </div> 
