--- a/app/templates/blog.html
+++ b/app/templates/blog.html
@@ -76,7 +76,7 @@
                     <textarea class="form-control" placeholder="Type your comment..." rows="2" name ="newcomment" required></textarea>
                 </div>
                 <div class="modal-footer flex-center">
-                    <button class="btn btn-sm btn-outline-success">Comment</button>
+                    <button class="btn btn-sm btn-success">Comment</button>
                     <a type="button" class="btn btn-outline-danger btn-sm " data-dismiss="modal">Exit</a>
                 </div>
             </form>
